# adcs

./: .gitignore  .gitmodules  README.md  RT1062_Pin_Functions.xlsx  RT1176_Pin_Functions.xlsx  adcs-hardware.kicad_pro  adcs-hardware.kicad_sch  adcs.kicad_sym  connectors.kicad_sch  example.kibot.yaml  memory_and_storage.kicad_sch  microcontroller.kicad_sch  motors.kicad_sch  power.kicad_sch  programmers.kicad_sch  sensors.kicad_sch  sym-lib-table
PCBranch/: PCBranch.kicad_pcb  PCBranch.kicad_pro  PCBranch.kicad_sch
Soldermander/: Soldermander.kicad_pro  Soldermander.kicad_sch  board_to_board.kicad_sch  mram.kicad_sch
adcs.pretty/: BGA196C80P14X14_1200X1200X152N.kicad_mod  DF40HC30100DS04V51.kicad_mod  MIMXRT1176AVM8A.kicad_mod  Osram_SFH2430.kicad_mod  Perfect_0201.kicad_mod  Perfect_0402.kicad_mod  RM3100.kicad_mod  SO-14_S.kicad_mod  SON127P800X600X95-9N-D.kicad_mod  castellated_05mm.kicad_mod
calcs/: ambient_light_sensing.ipynb  inertia.ipynb  wheel_sizing.ipynb
calibration/: flange_test_mount.stl
code/: README.md  serial_log1_20240118_153513.txt  serial_log1_20240118_153903.txt
code/flight/: .tags  Cargo.toml  flight.hex  typescript
code/flight/src/: allocator.rs  constants.rs  linear_algebra.rs  main.rs  photodiode.rs  rm3100.rs  solarsystem_model.rs  time.rs
code/flight/src/attitude_determination/: mod.rs  triad.rs
cpp-code/: platformio.ini
cpu_board/: board_to_board.kicad_sch  boot_config.kicad_sch  cpu_board.kicad_pcb  cpu_board.kicad_pro  cpu_board.kicad_sch  ibom.config.ini  interface.kicad_sch  mram.kicad_sch  power.kicad_sch  power_diagram.drawio  power_enable.kicad_sch  rt1176_1.kicad_sch  rt1176_2.kicad_sch  rt1176_3.kicad_sch  sdram.kicad_sch  usbc.kicad_sch
docs/: Tim_Review.md  slides.key
hardware/: adcs.kicad_sym  pinout.txt  pinout_output.txt  reorder_pins.py
sfh2430_breakout/: fp-lib-table  (+4 more)
(+123 files in other folders)
