[package]
name = "flight"
version = "0.1.0"
authors = ["Flynn Dreilinger <flynnd@stanford.edu>"]
edition = "2021"

[dependencies]
bitfield-struct = "0.5.6"
bytemuck = {version = "1.14.0", features = ["derive"]}
cortex-m = "0.7"
embedded-hal = "0.2"
libm = "0.2.8"
# Remove me if you don't want logging.
log = "0.4"
teensy4-panic = "0.2"
#nmea0183 = "0.3.1"
#nb = "1.0"
#nalgebra = { version = "*", default-features = false, features = [ "alloc", "libm"] }
#emballoc = "0.2.0"

[dependencies.teensy4-bsp]
version = "0.4"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
