[package]
name = "flight"
version = "0.1.0"
authors = ["Flynn Dreilinger <flynnd@stanford.edu>"]
edition = "2021"

[dependencies]
bitfield-struct = "0.5"
bytemuck = {version = "1.14", features = ["derive"]}
cortex-m = "0.7"
embedded-alloc = "0.5"
embedded-hal = "0.2"
heapless = "0.8"
libgeomag = {path = "./crates/libgeomag"}
libm = "0.2"
log = "0.4"
teensy4-panic = "0.2"
tiny-nmea = {path = "./crates/tiny-nmea"}
nalgebra = { version = "*", default-features = false, features = ["libm"] }
embedded-sdmmc = "0.6.0"


[dependencies.teensy4-bsp]
version = "0.4"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

# Optimize all dependencies
[profile.dev.package."*"]
opt-level = "z"

# Don't optimize the `libm` crate (for debugging purposes)
# [profile.dev.package.libm]
# opt-level = 0